# rustaceans

./: .gitignore  README.md
240716_async_counter_experiments/: Cargo.toml
240716_async_counter_experiments/src/: main.rs
240723_phantom_data/: Cargo.toml  README.md
240723_phantom_data/src/: main.rs
240730_higher_ranked_trait_bounds/: Cargo.toml
240730_higher_ranked_trait_bounds/src/: main.rs
240806_interior_mutability/src/: lib.rs
240813_pyo3_rust_in_python/: Cargo.toml  README.md  pyproject.toml  rustaceans.pyi
240813_pyo3_rust_in_python/src/: lib.rs
240827_interview_questions/: gemeinsam
240903_lunatic_tryout/: Cargo.toml
240903_lunatic_tryout/src/: main.rs
240910_generic_trait_unittests/problem/: Cargo.toml
240910_generic_trait_unittests/solution/: Cargo.toml
241001_billion_row_challenge/: create_measurements  measurements_10000.txt
241001_billion_row_challenge/rustaceans_brc_01_default/: Cargo.toml
241001_billion_row_challenge/rustaceans_brc_02_hashmap/: Cargo.toml
241001_billion_row_challenge/rustaceans_brc_03_next/: ideas.md
241029_wasm_webapp/: Cargo.toml  bootstrap.js  index.html  style.css
241029_wasm_webapp/src/: lib.rs
241217_juniper_graph_ql/: Cargo.toml
241217_juniper_graph_ql/src/: main.rs  (+1 more)
gotcp/: go.mod  main.go
opengl/: Cargo.toml
stfoerster/: Dockerfile  README.md  nats-server.conf  run  server
stfoerster/project/: .env  Cargo.toml  benutzer.json
stfoerster/project/src/: dto.rs  lib.rs  main.rs  math.rs  sub.rs
stfoerster/project/tests/: integration_dto.rs  integration_lib.rs  integration_test.rs
(+22 files in other folders)
